--- a/panel/package.json
+++ b/panel/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "next",
+    "dev": "next --port 3001",
     "start": "next start",
     "buil": "next buil"
   },
@@ -15,5 +15,8 @@
     "next": "^14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.10"
   }
 }
