--- a/site/package.json
+++ b/site/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "next",
+    "dev": "next --port 3002",
     "start": "next start",
     "buil": "next buil"
   },
