--- a/panel/package.json
+++ b/panel/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "autoprefixer": "^10.4.20",
     "next": "^14.2.5",
+    "postcss": "^8.4.42",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
