--- a/panel/package.json
+++ b/panel/package.json
@@ -16,7 +16,8 @@
     "next": "^14.2.5",
     "postcss": "^8.4.42",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "tailwindcss": "^3.4.10"
