--- a/panel/package.json
+++ b/panel/package.json
@@ -13,11 +13,13 @@
   "description": "",
   "dependencies": {
     "autoprefixer": "^10.4.20",
+    "formik": "^2.4.6",
     "next": "^14.2.5",
     "postcss": "^8.4.42",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "tailwindcss": "^3.4.10"
